# mindfulness

./: .gitignore  CLAUDE.md  HANDOFF.md  IMPROVEMENT_PLAN.md  PLAN.md  README.md  dev
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  generated_music.py  goal.py  session.py  settings.py  tag.py
backend/app/routes/: discord.py  export.py  goals.py  music.py  reminders.py  sessions.py  sounds.py  stats.py  tags.py
backend/app/services/: discord.py  export.py  music_gen.py  scheduler.py
backend/tests/: conftest.py  test_health.py  test_sessions.py
config/: config.yaml
frontend/: index.html  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/public/sounds/: README.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: config.ts  goals.ts  sessions.ts  stats.ts  tags.ts
frontend/src/components/: BellPlayer.tsx  Icons.tsx  ThemeSwitcher.tsx
frontend/src/constants/: sounds.ts
frontend/src/hooks/: useAudio.ts  useAudioLayers.ts  useTimer.ts  (+1 more)
plans/: 20260204_1639_mindfulness-phase1-3.md  20260204_1922_aura-meditation-redesign.md  20260204_2028_mindfulness-app-expansion.md  20260204_2031_mindfulness-feature-complete.md  20260204_2216_zen-meditation-ui-overhaul.md  20260204_2219_mindfulness-app-redesign.md  20260204_2325_monochrome-ui-refresh.md  20260204_2349_ui-overhaul.md  20260205_0047_audio-breathe-overhaul.md  20260208_2234_plan.md
scripts/: download_sounds.py
tmp/: context.md  plan-v1.md  plan-v2.md  plan-v3.md  reviewer-v1.md  reviewer-v2.md  reviewer-v3.md
(+70 files in other folders)
